<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootGroup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Toolbar"
        android:background="@color/headerBackground">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:theme="@style/AppTheme.Toolbar"
            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed|exitUntilCollapsed|snap">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:alpha="0.6"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_world"
                app:layout_collapseMode="parallax"
                app:tint="#A19B42" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_collapseMode="parallax">

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/netDelaySwitch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorOnHeader"
                    android:layout_gravity="bottom|end"
                    android:text="@string/net_delay"/>

            </FrameLayout>

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@android:color/transparent"
                android:theme="@style/AppTheme.Toolbar"
                app:layout_collapseMode="pin"
                app:title="@string/app_name"
                app:titleTextColor="@color/toolbarTitle" />
        </com.google.android.material.appbar.CollapsingToolbarLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
        android:id="@+id/startBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:text="@string/start"
        android:textColor="@color/fabText"
        app:icon="@drawable/ic_baseline_send_24"
        app:iconTint="@color/fabIcon" />

    <FrameLayout
        android:id="@+id/dialogRoot"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="20dp"
        android:visibility="invisible">

        <View
            android:id="@+id/dialogBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/dialogBackground" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/dialogContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            app:cardBackgroundColor="@color/dialogForeground"
            app:cardCornerRadius="@dimen/cardRadius"
            app:cardElevation="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/dialogIconView"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="10dp"
                    android:background="@drawable/bg_icon"
                    android:gravity="center"
                    android:maxLength="2"
                    android:text="@string/app_name"
                    android:textColor="@color/colorPrimaryVariant"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="@id/titleInputLayout"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/titleInputLayout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/titleInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    app:layout_constraintLeft_toRightOf="@id/dialogIconView"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/titleInputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_title"
                        android:lines="1"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/textPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/urlInputLayout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0px"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    app:layout_constraintLeft_toLeftOf="@id/dialogIconView"
                    app:layout_constraintRight_toRightOf="@id/titleInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/titleInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/urlInputText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start|top"
                        android:hint="@string/hint_url"
                        android:lines="4"
                        android:textColor="@color/textPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/submitBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/complete"
                    android:theme="@style/Widget.MaterialComponents.Button.TextButton"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="@id/urlInputLayout"
                    app:layout_constraintTop_toBottomOf="@id/urlInputLayout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancelBtn"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:text="@string/cancel"
                    android:theme="@style/Widget.MaterialComponents.Button.TextButton"
                    app:layout_constraintBottom_toBottomOf="@id/submitBtn"
                    app:layout_constraintRight_toLeftOf="@id/submitBtn"
                    app:layout_constraintTop_toTopOf="@id/submitBtn" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>

