<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.CopyActivity"
    android:id="@+id/rootGroup">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.Toolbar"
        android:background="@color/headerBackground">
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:theme="@style/AppTheme.Toolbar"/>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/siteInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/siteInputText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start|top"
                android:hint="@string/site_info"
                android:lines="4"
                android:textColor="@color/textPrimary" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:text="@string/default_site"
            app:layout_constraintTop_toBottomOf="@id/siteInputLayout"
            app:layout_constraintLeft_toLeftOf="@id/siteInputLayout"
            android:layout_marginTop="10dp"
            android:id="@+id/defaultBtn"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/parse"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/siteInputLayout"
            app:layout_constraintRight_toRightOf="@id/siteInputLayout"
            android:id="@+id/parseBtn"/>

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/loadingView"
            android:layout_width="24dp"
            android:layout_height="24dp"
            app:layout_constraintTop_toTopOf="@id/parseBtn"
            app:layout_constraintBottom_toBottomOf="@id/parseBtn"
            app:layout_constraintRight_toLeftOf="@id/parseBtn"
            android:layout_marginRight="10dp"
            style="@style/Widget.AppCompat.ProgressBar"
            android:visibility="invisible"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="0px"
            android:layout_height="0px"
            app:layout_constraintLeft_toLeftOf="@id/siteInputLayout"
            app:layout_constraintRight_toRightOf="@id/siteInputLayout"
            app:layout_constraintTop_toBottomOf="@id/parseBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            app:cardElevation="0px"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/cardBackground"
            android:id="@+id/cardRoot">

            <LinearLayout
                android:visibility="invisible"
                android:id="@+id/cardContentGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:elevation="3dp"
                    android:background="@color/cardBackground"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/selectAllBtn"
                        android:layout_width="86dp"
                        android:layout_height="48dp"
                        android:src="@drawable/ic_baseline_select_all_24"
                        android:scaleType="center"
                        android:background="?attr/selectableItemBackground"/>

                    <Space
                        android:layout_width="0px"
                        android:layout_height="1px"
                        android:layout_weight="1"/>

                    <TextView
                        android:id="@+id/importBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:layout_gravity="center"
                        android:text="@string/add"
                        android:gravity="center"
                        android:paddingLeft="12dp"
                        android:paddingRight="12dp"
                        android:minWidth="86dp"
                        android:textColor="@color/colorOnSecondary"
                        android:background="@drawable/bg_card_right_btn"/>

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/recyclerView"/>

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>